--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body{
 }
 .box4{
 	width: 100%;
-	height: 250px;
+	height: 200px;
 	background-color: #304A67;
 	border: 4px solid #2267B5;
 	margin-top: 4%;
@@ -80,4 +80,5 @@ body{
 	top: 50%;
 	width: 100%;
 	transform: translateY(-50%);
+	color: white;
 }
